--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-*
+/* *
 {
     margin: 0;
     padding: 0;
@@ -9,12 +9,26 @@ body
 {
     height: 100vh;
     font-family: 'Poppins';
-}
+} */
 
-.webgl
+/* .webgl
 {
     position: fixed;
     top: 0;
     left: 0;
     outline: none;
+} */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+
+body, html {
+  width:100%;
+  height:100%;
+  background:#ddd;
+  font-family: 'Montserrat', sans-serif;
+  font-size:99px;
+  text-align:center;
+}
+
+div {
+  position:absolute;
 }
